<resources>
    <string name="app_name">BoardGamer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--  Buttons  -->
    <string name="btn_take_picture">Take picture</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_create_profile">Create Profile</string>
    <string name="button_upload_post">Upload Post</string>
    <!--  Hints -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_sign_up">Not have an account? Sign Up</string>
    <string name="hint_username">Username</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_post_description">Post Description</string>
    <!--  Titles  -->
    <string name="title_fragment_home">Home</string>
    <string name="title_fragment_login">Login</string>
    <string name="title_fragment_sign_up">Sign Up</string>
    <string name="title_fragment_profile">Profile</string>
    <string name="title_fragment_create_post">New Post</string>
    <!--  Extra  -->
    <string name="helper_text_required">Required</string>
    <string name="picture_preview">Picture Preview</string>
    <string name="alert_creating_profile">Creating profile …</string>
    <string name="alert_no_available_posts">No available posts</string>
</resources>