<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.iubh.boardgamer.ui.home.HomeFragment"
        android:label="@string/title_fragment_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.iubh.boardgamer.ui.auth.LoginFragment"
        android:label="@string/title_fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_setupProfileFragment"
            app:destination="@id/setupProfileFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.iubh.boardgamer.ui.auth.RegisterFragment"
        android:label="@string/title_fragment_sign_up"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_setupProfileFragment"
            app:destination="@id/setupProfileFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/createPostFragment"
        android:name="com.iubh.boardgamer.ui.createpost.CreatePostFragment"
        android:label="@string/title_fragment_create_post"
        tools:layout="@layout/fragment_create_post" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.iubh.boardgamer.ui.profile.ProfileFragment"
        android:label="@string/title_fragment_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/setupProfileFragment"
        android:name="com.iubh.boardgamer.ui.auth.SetupProfileFragment"
        android:label="fragment_setup_profile"
        tools:layout="@layout/fragment_setup_profile" >
        <action
            android:id="@+id/action_setupProfileFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/setupProfileFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>