<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.SetupProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imgProfile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_default"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/placeHolderPhoto"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_add_photo"
            app:layout_constraintBottom_toBottomOf="@id/imgProfile"
            app:layout_constraintEnd_toEndOf="@id/imgProfile"
            app:layout_constraintStart_toStartOf="@id/imgProfile"
            app:layout_constraintTop_toTopOf="@id/imgProfile" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_min"
        android:hint="@string/hint_username"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:endIconMode="clear_text"
        app:helperText="@string/helper_text_required"
        app:startIconDrawable="@drawable/ic_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bntCreateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding_min"
        android:text="@string/button_create_profile"
        app:cornerRadius="30dp" />

</LinearLayout>